fix: the overflow of upload file name

--- a/src/components/DataView.css
+++ b/src/components/DataView.css
@@ -45,3 +45,8 @@
     content: '■';
     font-size: 15px;
 }
+
+.ant-upload-list-item-name{
+    max-width: 6vw;
+    text-overflow: ellipsis;
+}
